# musicbotd

./: .gitignore  CMakeLists.txt  mbtts  server_cmd.txt
lib/log/: config.hpp  log.hpp  logentry.cpp  logentry.hpp  logger.cpp  logger.hpp  loglevel.hpp  logstream.hpp
lib/net/: client.cpp  client.hpp  server.cpp  server.hpp
lib/util/: any.hpp  blockingqueue.hpp  optional.hpp
src/: archive.cpp  archive.hpp  archivemgr.cpp  archivemgr.hpp  cmdparser.cpp  cmdparser.hpp  cmdparserapi.cpp  cmdparserapi.hpp  cmdparserbase.hpp  config.hpp  eventviewer.hpp  main.cpp  player.cpp  player.hpp  tokenmgr.cpp  tokenmgr.hpp  webmusic.hpp  ytnamesolver.cpp  ytnamesolver.hpp
src/net/: client.hpp
src/util/: log.hpp
test/: test_any.cpp  test_log.cpp
test/src/: log.cpp
